; ModuleID = '/home/carl/AnghaBench/esp-idf/components/efuse/src/extr_esp_efuse_api.c_esp_efuse_write_block.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/efuse/src/extr_esp_efuse_api.c_esp_efuse_write_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i64 }

@ESP_OK = common dso_local global i32 0, align 4
@EFUSE_BLK0 = common dso_local global i64 0, align 8
@EFUSE_BLK_MAX = common dso_local global i64 0, align 8
@ESP_ERR_INVALID_ARG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @esp_efuse_write_block(i64 %0, i8* %1, i64 %2, i64 %3) #0 {
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca [1 x %struct.TYPE_3__], align 16
  %11 = alloca [2 x %struct.TYPE_3__*], align 16
  store i64 %0, i64* %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  store i64 %3, i64* %8, align 8
  %12 = load i32, i32* @ESP_OK, align 4
  store i32 %12, i32* %9, align 4
  %13 = load i64, i64* %5, align 8
  %14 = load i64, i64* @EFUSE_BLK0, align 8
  %15 = icmp eq i64 %13, %14
  br i1 %15, label %26, label %16

16:                                               ; preds = %4
  %17 = load i64, i64* %5, align 8
  %18 = load i64, i64* @EFUSE_BLK_MAX, align 8
  %19 = icmp sge i64 %17, %18
  br i1 %19, label %26, label %20

20:                                               ; preds = %16
  %21 = load i8*, i8** %6, align 8
  %22 = icmp eq i8* %21, null
  br i1 %22, label %26, label %23

23:                                               ; preds = %20
  %24 = load i64, i64* %8, align 8
  %25 = icmp eq i64 %24, 0
  br i1 %25, label %26, label %28

26:                                               ; preds = %23, %20, %16, %4
  %27 = load i32, i32* @ESP_ERR_INVALID_ARG, align 4
  store i32 %27, i32* %9, align 4
  br label %43

28:                                               ; preds = %23
  %29 = getelementptr inbounds [1 x %struct.TYPE_3__], [1 x %struct.TYPE_3__]* %10, i64 0, i64 0
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i64, i64* %5, align 8
  store i64 %31, i64* %30, align 8
  %32 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 1
  %33 = load i64, i64* %7, align 8
  store i64 %33, i64* %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 2
  %35 = load i64, i64* %8, align 8
  store i64 %35, i64* %34, align 8
  %36 = getelementptr inbounds [2 x %struct.TYPE_3__*], [2 x %struct.TYPE_3__*]* %11, i64 0, i64 0
  %37 = getelementptr inbounds [1 x %struct.TYPE_3__], [1 x %struct.TYPE_3__]* %10, i64 0, i64 0
  store %struct.TYPE_3__* %37, %struct.TYPE_3__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %36, i64 1
  store %struct.TYPE_3__* null, %struct.TYPE_3__** %38, align 8
  %39 = getelementptr inbounds [2 x %struct.TYPE_3__*], [2 x %struct.TYPE_3__*]* %11, i64 0, i64 0
  %40 = load i8*, i8** %6, align 8
  %41 = load i64, i64* %8, align 8
  %42 = call i32 @esp_efuse_write_field_blob(%struct.TYPE_3__** %39, i8* %40, i64 %41)
  store i32 %42, i32* %9, align 4
  br label %43

43:                                               ; preds = %28, %26
  %44 = load i32, i32* %9, align 4
  ret i32 %44
}

declare dso_local i32 @esp_efuse_write_field_blob(%struct.TYPE_3__**, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
